lib/src/compiler/tests/testdata/errors/46.out
error[E017]: `entrypoint` is unsupported
 --> line:3:5
  |
3 |     entrypoint == 0x1000
  |     ^^^^^^^^^^ the `entrypoint` keyword is not supported anymore
  |     ---------- help: use `pe.entry_point` or `elf.entry_point` or `macho.entry_point`
  |